--- a/app/templates/ulist.html
+++ b/app/templates/ulist.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky{% endblock %}
+{% block title %}Huiwen OA - 用户列表{% endblock %}
 
 {% block content %}
 <div class="container">
