--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,12 +25,19 @@
                 <li><a href="/">首页</a></li>
                 {% if current_user.is_authenticated %}
                 <li><a href="/ulist">用户列表</a></li>
+                <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">付款申请 <b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ url_for('work.payapply') }}">新增申请</a></li>
+                            <li><a href="{{ url_for('work.payment') }}">付款清单</a></li>
+                        </ul>
+                    </li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.username}} <b class="caret"></b></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.name}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('auth.change_passwd') }}">修改密码</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
