--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,6 +30,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('work.payapply') }}">新增申请</a></li>
                             <li><a href="{{ url_for('work.payment') }}">付款清单</a></li>
+                            <li><a href="{{ url_for('work.approvelist') }}">审批列表</a></li>
                         </ul>
                     </li>
                 {% endif %}
