--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,13 +26,28 @@
                 {% if current_user.is_authenticated %}
                 <li><a href="/ulist">用户列表</a></li>
                 <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">付款申请 <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{{ url_for('work.payapply') }}">新增申请</a></li>
-                            <li><a href="{{ url_for('work.payment') }}">付款清单</a></li>
-                            <li><a href="{{ url_for('work.approvelist') }}">审批列表</a></li>
-                        </ul>
-                    </li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">付款申请 <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('work.payapply') }}">新增申请</a></li>
+                        <li><a href="{{ url_for('work.payment') }}">付款清单</a></li>
+                        <li><a href="{{ url_for('work.approvelist') }}">审批列表</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">合同申请 <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#1">新增申请</a></li>
+                        <li><a href="#1">合同清单</a></li>
+                        <li><a href="#1">审批列表</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">授权操作 <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="{{ url_for('work.addpermission') }}">新增授权</a></li>
+                        <li><a href="{{ url_for('work.permissionlist') }}">授权列表</a></li>
+                    </ul>
+                </li>
                 {% endif %}
             </ul>
             <ul class="nav navbar-nav navbar-right">
