--- a/app/templates/auth/email/confirm.html
+++ b/app/templates/auth/email/confirm.html
@@ -1,7 +1,6 @@
-Dear <b>{{ mailuser.username }}</b>,
-Welcome to Flasky!
-To confirm your account please click on the following link:
+亲爱的 <b>{{ mailuser.username }}</b>，
+欢迎加入辉文OA系统
+为了确认您的帐号请点击下面的链接：
 {{ url_for('auth.confirmmail', token=token, _external=True) }}
-Sincerely,
-The Flasky Team
-Note: replies to this email address are not monitored.
+
+Note: 请勿回复此邮箱。
