--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,7 @@
 {{ super() }}
 <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
 {% endblock %}
 
 {% block navbar %}
@@ -25,19 +26,19 @@
                 <li><a href="/">首页</a></li>
                 {% if current_user.is_authenticated %}
                 <li><a href="/ulist">用户列表</a></li>
-                <li class="dropdown">
+                <!--<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">付款申请 <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('work.payapply') }}">新增申请</a></li>
                         <li><a href="{{ url_for('work.payment') }}">付款清单</a></li>
                         <li><a href="{{ url_for('work.approvelist') }}">审批列表</a></li>
                     </ul>
-                </li>
+                </li>-->
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">合同申请 <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#1">新增申请</a></li>
-                        <li><a href="#1">合同清单</a></li>
+                        <li><a href="{{ url_for('work.contractapply') }}">新增申请</a></li>
+                        <li><a href="{{ url_for('work.allcontractlist') }}">合同清单</a></li>
                         <li><a href="#1">审批列表</a></li>
                     </ul>
                 </li>
@@ -46,6 +47,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('work.addpermission') }}">新增授权</a></li>
                         <li><a href="{{ url_for('work.permissionlist') }}">授权列表</a></li>
+                        <li><a href="{{ url_for('work.addrules') }}">授权说明</a></li>
                     </ul>
                 </li>
                 {% endif %}
@@ -55,7 +57,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.name}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('auth.change_passwd') }}">修改密码</a></li>
+                        <!--<li><a href="{{ url_for('auth.change_passwd') }}">修改密码</a></li>-->
                         <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
                     </ul>
                 </li>
