--- a/app/templates/work/permissionlist.html
+++ b/app/templates/work/permissionlist.html
@@ -6,11 +6,16 @@
 <div class="container">
     <div>
         <table class="table table-striped">
-            <tread><tr><th>授权书</th><th>授权范围</th><th>授予职能</th><th>被授权人</th><th>授权期限</th><th>有效期自</th><th>有效期至</th></tr></tread>
+            <tread><tr><th>授权书</th><th>有效性</th><th>授权范围</th><th>授予职能</th><th>被授权人</th><th>授权期限</th><th>有效期自</th><th>有效期至</th></tr></tread>
             <tbody>
             {% for permission in permissionlist %}
                 <tr>
                     <td> <a href="{{ url_for('work.permissiondetail', pmid=permission.idpermission, _external=True) }}">[授权书] {{ permission.idpermission }} 号</a> </td>
+                    <td> 
+                        {% if permission.valid==True %}<span style="color:green">有效</span>
+                        {% elif permission.valid==False %}<span style="color:red">失效</span>
+                        {% endif %}
+                    </td>
                     <td> {{ label_dict.all_company_dict[permission.companyid] }} </td>
                     <td> {{ label_dict.all_dptincharge_dict[permission.positionid] }} </td>
                     <td> {{ label_dict.all_users_dict[permission.puid] }} </td>
