demo v0.95 - 还差view3的734行对一级审批的显示限制 - 还差二级复核的设计

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -39,7 +39,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="{{ url_for('work.contractapply') }}">新增申请</a></li>
                         <li><a href="{{ url_for('work.allcontractlist') }}">合同清单</a></li>
-                        <li><a href="#1">审批列表</a></li>
+                        <li><a href="{{ url_for('work.contractreview') }}">审批列表</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
