--- a/app/templates/work/contractpdf.html
+++ b/app/templates/work/contractpdf.html
@@ -14,7 +14,7 @@ table,table tr th, table tr td {
 	width:850px;
 	height: 1150px;
 	border:0px solid #000000;
-    margin-top: 80px;
+	margin-top: 80px;
 }
 #title {
 	width: 850px;
@@ -29,7 +29,7 @@ table,table tr th, table tr td {
 	border-left:2px solid #000000;
 	border-right:2px solid #000000;
 	padding:2px;
-    table-layout:fixed;
+	table-layout:fixed;
 }
 #table2{
 	width: 850px;
@@ -39,7 +39,7 @@ table,table tr th, table tr td {
 	border-left:2px solid #000000;
 	border-right:2px solid #000000;
 	padding:2px;
-    table-layout:fixed;
+	table-layout:fixed;
 }
 #table3{
 	width: 850px;
@@ -50,7 +50,7 @@ table,table tr th, table tr td {
 	border-bottom: 2px solid #000000;
 	border-collapse: collapse; 
 	padding:2px;
-    table-layout:fixed;
+	table-layout:fixed;
 }
 #content1{
     padding-left: 5px;
@@ -202,7 +202,7 @@ table,table tr th, table tr td {
   <tbody>
     <tr>
       <td style="width:160px; font-weight: bold">&nbsp;二级复核意见</td>
-      <td style="width:262px">&nbsp;[暂缺]</td>
+      <td style="width:262px">&nbsp;</td>
       <td style="width:160px; font-weight: bold">&nbsp;复核人</td>
       <td style="width:262px">&nbsp;</td>
     </tr>
@@ -218,7 +218,7 @@ table,table tr th, table tr td {
         <tbody>
           <tr>
             <td style="width:160px; font-weight: bold">&nbsp;盖章人</td>
-            <td style="width:262px">&nbsp;[暂缺]</td>
+            <td style="width:262px">&nbsp;</td>
             <td style="width:160px; font-weight: bold">&nbsp;盖章时间</td>
             <td style="width:262px">&nbsp;</td>
           </tr>
