--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -40,6 +40,7 @@
                         <li><a href="{{ url_for('work.contractapply') }}">新增申请</a></li>
                         <li><a href="{{ url_for('work.allcontractlist') }}">合同清单</a></li>
                         <li><a href="{{ url_for('work.contractreview') }}">审批列表</a></li>
+                        <li><a href="{{ url_for('work.contractrules') }}">流程说明</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
