--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -58,7 +58,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{current_user.name}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <!--<li><a href="{{ url_for('auth.change_passwd') }}">修改密码</a></li>-->
+                        <li><a href="{{ url_for('auth.change_passwd') }}">修改密码</a></li>
                         <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
                     </ul>
                 </li>
