补充流程制度说明

--- a/app/templates/work/contractrules.html
+++ b/app/templates/work/contractrules.html
@@ -16,6 +16,8 @@
         <li style="margin:1em">提交合同申请后，申请人需将合同文本交上述三方审核。</li>
         <li style="margin:1em">三方不再有修改意见后，分别在表单中提交复核意见。</li>
         <li style="margin:1em">部门长参考三方意见后对合同是否可订立做出批复。</li>
+        <li style="margin:1em;color:red">当前合同审批按照旧制度中需骆总签批的还需提交审批表进行二级复核后方可正式批复。</li>
+        <li style="margin:1em;color:red">公章合同章管理人员应从法务或财务处取得经协商修改完毕的合同文本，对完成批复的合同盖章生效。</li>
     </ol>
 </div>
 
