--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -1,8 +1,8 @@
-<p>Dear {{ mailuser.username }},</p>
-<p>To reset your password <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">click here</a>.</p>
-<p>Alternatively, you can paste the following link in your browser's address bar:</p>
+<p>你好 {{ mailuser.username }}，</p>
+<p>需要重设密码 <a href="{{ url_for('auth.password_reset', token=token, _external=True) }}">请点击这里</a>。</p>
+<p>或者将下面链接粘贴到浏览器地址栏：</p>
 <p>{{ url_for('auth.password_reset', token=token, _external=True) }}</p>
-<p>If you have not requested a password reset simply ignore this message.</p>
-<p>Sincerely,</p>
-<p>The Flasky Team</p>
-<p><small>Note: replies to this email address are not monitored.</small></p>
+<p>若你自己未申请重置密码而收到此邮件，请忽略。</p>
+<p>&nbsp</p>
+<p>HUIWEN OA 系统管理员</p>
+<p><small>注意：请勿直接回复此邮件。</small></p>
