--- a/app/templates/auth/email/reset_password.html
+++ b/app/templates/auth/email/reset_password.html
@@ -3,6 +3,6 @@
 <p>或者将下面链接粘贴到浏览器地址栏：</p>
 <p>{{ url_for('auth.password_reset', token=token, _external=True) }}</p>
 <p>若你自己未申请重置密码而收到此邮件，请忽略。</p>
-<p>&nbsp</p>
+<p>&nbsp;</p>
 <p>HUIWEN OA 系统管理员</p>
 <p><small>注意：请勿直接回复此邮件。</small></p>
